--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
     "vue3-youtube": "^0.1.9"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^18.16.3",
     "@vitejs/plugin-vue": "^4.1.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "sass": "^1.62.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vue-tsc": "^1.4.2"
